--- a/TP_IGL_Front-end/src/index.css
+++ b/TP_IGL_Front-end/src/index.css
@@ -32,6 +32,11 @@
         width: 600px;
       }
 
+    .custom-PC{
+      height: 600;
+      width: 700px;
+    }  
+
     .splach{
       height: 350px;
       width: 500px;
@@ -78,5 +83,56 @@
   right: 10px; /* Adjust the right position for the next arrow */
 }
 
+
+/********************************TO CUSTOMIZE THE SCOLL BARS*********************************/
+/* width */
+::-webkit-scrollbar {
+  width: 12px;
+  
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #E5E5E5;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #DF1477;
+  border-radius: 5px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+/* Standard scrollbar styles (for non-WebKit browsers) */
+div.overflow-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: #DF1477 #E5E5E5;
+  overflow-y: scroll; /* Show vertical scrollbar */
+  overflow-x: hidden; /* Hide horizontal scrollbar */
+}
+
+div.overflow-scroll::-webkit-scrollbar {
+  width: 10px;
+  
+}
+
+div.overflow-scroll::-webkit-scrollbar-thumb {
+  background-color: #DF1477;
+  
+}
+
+div.overflow-scroll::-webkit-scrollbar-track {
+  background-color: #E5E5E5;
+}
+/************************************************************************************************/
+
+.show-atricle-scroll{
+  height:600px;
+}
       
 }
