--- a/TP_IGL_Front-end/src/index.css
+++ b/TP_IGL_Front-end/src/index.css
@@ -134,5 +134,52 @@ div.overflow-scroll::-webkit-scrollbar-track {
 .show-atricle-scroll{
   height:600px;
 }
-      
+
+/* For the inputes names and password*/
+.placeholder{
+ 
+  top: 10px;
+  left: -12px;
+  font-size: 15px;
+  padding: 0px 5px;
+  color: #666;
+  pointer-events: none;
+  transition: 0.3s;
+}
+
+input:valid + .placeholder,
+input:focus + .placeholder {
+  top: -2px;
+  color: #666;
+  background-color: #FFFF;
+  transform: translateX(20px) translateY(-10px) scale(0.88);
+}
+
+.showPasswordEye{
+  position: absolute;
+  color: #555;
+  top: 13px;
+  right: 10px;
+}
+
+/* Custom styles for square radio button */
+input[type="radio"] {
+  -moz-appearance: none;
+  appearance: none;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  border: 1px solid #666;
+  border-radius: 0em;
+  outline: none;
+  transition: 0.2s;
+}
+
+/* Custom styles for checked state */
+input[type="radio"]:checked {
+  display: inline-block;
+  background-color: #DF1477;
+  border-color: #666;
+}
+
 }
